--- a/src/Luckball/Luckball.css
+++ b/src/Luckball/Luckball.css
@@ -14,3 +14,11 @@
     color: grey;
     font-size: 1.1rem;
 }
+@media (max-width:1000px) {
+    .luckball{
+        text-align: center;
+        margin: 0px 0px;
+    
+    }
+       
+}
