--- a/src/Acedmy/Acedmy.css
+++ b/src/Acedmy/Acedmy.css
@@ -1,14 +1,13 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 .main-acedmy {
   background-image: url(./portfolio-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  
   overflow-y: scroll;
   overflow-x: hidden;
   height: 100vh;
@@ -18,6 +17,7 @@
   text-align: center;
   padding: 20px;
 }
+
 .acedmy h1 {
   margin-top: 30px;
   color: white;
@@ -30,8 +30,6 @@
   align-items: center;
   justify-content: flex-start;
   overflow: hidden;
-  /* width: 100%; */
-  /* max-width: 1200px; */
   margin: 0 auto;
 }
 
@@ -43,16 +41,15 @@
 .slider img {
   height: 250px;
   width: 400px;
-  /* margin-right: 10px; Space between images */
 }
 
 .football {
   display: flex;
-  /* align-items: center; */
   justify-content: space-around;
   margin: 0px 100px;
   gap: 100px;
 }
+
 .part-1 img {
   height: 400px;
   width: 500px;
@@ -63,38 +60,78 @@
   line-height: 1.5;
   margin: 0px 20px;
 }
+
 .part-2 p:nth-child(2) {
- 
   color: white;
   text-align: start;
-  
   font-size: 2.5rem;
   margin: 0px 20px;
-  /* line-height: 1.8; */
 }
+
 .part-2 p:nth-child(3) {
   font-size: 1.2rem;
   margin: 0px 20px;
   line-height: 1.8;
   color: white;
 }
+
 .part-2 p:nth-child(4) {
   font-size: 1.2rem;
   margin: 0px 20px;
   line-height: 1.8;
   color: white;
 }
+
 .part-2 button {
-   margin-top: 30px;
-   margin-left: 20px;
+  margin-top: 30px;
+  margin-left: 20px;
   padding: 20px;
   border: 2px solid yellow;
   background-color: inherit;
   color: white;
 }
-@media (max-width:1000px) {
-  .football{
+
+@media (max-width: 1000px) {
+  .football {
     flex-wrap: wrap;
   }
-  
+}
+
+@media (max-width: 100px) {
+  .acedmy h1 {
+    font-size: 1.5rem;
+  }
+
+  .slider img {
+    height: 100px;
+    width: 150px;
+  }
+
+  .football {
+    flex-direction: column;
+    margin: 0 10px;
+    gap: 20px;
+  }
+
+  .part-1 img {
+    height: 200px;
+    width: 250px;
+  }
+
+  .part-2 p:first-child {
+    font-size: 0.8rem;
+  }
+
+  .part-2 p:nth-child(2) {
+    font-size: 1.2rem;
+  }
+
+  .part-2 p:nth-child(3), .part-2 p:nth-child(4) {
+    font-size: 0.9rem;
+  }
+
+  .part-2 button {
+    padding: 10px;
+    font-size: 0.8rem;
+  }
 }
