--- a/src/Ourmission/Ourmission.css
+++ b/src/Ourmission/Ourmission.css
@@ -35,3 +35,12 @@
     color: white;
   }
   
+  @media (max-width:1000px) {
+    .our-mission {
+      padding: 0;
+      margin: 0px 0px; 
+     
+      
+    }
+    
+  }
