--- a/src/Cochsection/Coch/Coch.css
+++ b/src/Cochsection/Coch/Coch.css
@@ -8,96 +8,142 @@
     /* position: absolute; */
     background-repeat: no-repeat;
 }
-.about-coch{
+.about-coch {
     position: absolute;
     color: white;
-    bottom: 100px;
+    bottom: 50px; /* Adjust to position it near the bottom */
+    left: 50%; 
+    transform: translateX(-50%); /* Center the text horizontally */
     text-align: center;
-    left: 40%;
 }
-.about-coch p:first-child{
+
+.about-coch p:first-child {
     font-size: 4rem;
-    font-weight:800;
+    font-weight: 800;
 }
-.about-coch p:last-child{
+
+.about-coch p:last-child {
     font-size: 1.8rem;
     color: yellow;
 }
-.details{
-    display: flex;
-    align-items: end;
-    justify-content: flex-end;
-    gap: 50px;
-}
 
-.coch-desc p:first-child{
-    font-size: 3rem;
-    font-weight: 800;
-   
-    
-}
-.coch-desc{
-    padding-top: 80px;
-}
-.coch-desc p:nth-child(2),
-.coch-desc p:nth-child(3),
-.coch-desc p:nth-child(4){
-    line-height: 1.8;
-    
-    
-}
 
-.coch-img ,.coch-desc{
-    height: 60vh;
-    width: 40vw;
-    
-}
-.coch-img img{
-    height: 60vh;
-    width: 40vw;
-}
-.Courses{
+
+
+.Courses {
     background-image: url(./price-bg.jpg);
-    background-size: cover; 
-    background-position: center; 
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    /* background-attachment: fixed;  */
-    width: 100%; 
-    height: 80vh; 
-     
+    width: 100%;
+    height: 80vh;
+    min-height: 500px;
 }
-.Courses h1{
+
+.Courses h1 {
     font-size: 3rem;
     color: white;
     text-align: center;
     padding-top: 100px;
-    
-
 }
-.courses-details{
+
+.courses-details {
     padding-top: 50px;
     color: white;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+}
 
-}
-.courses-details div p:first-child{ 
+.courses-details div p:first-child {
     font-size: 2rem;
-    font-weight: 500
+    font-weight: 500;
 }
-.course-comapany{
+
+.course-comapany {
     padding-top: 50px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
-.course-comapany img{
+
+.course-comapany img {
     height: 150px;
     width: 300px;
 }
 
-@media only screen and (max-width: 600px) {
-    
+@media (max-width: 1000px) {
+    .Courses h1 {
+        font-size: 2rem;
+        padding-top: 50px;
+    }
+
+    .Courses {
+        height: auto;
+        min-height: 400px;
+    }
+
+    .courses-details {
+        flex-direction: column;
+        padding-top: 20px;
+    }
+
+    .course-comapany {
+        flex-direction: column;
+        padding-top: 20px;
+    }
+
+    .course-comapany img {
+        height: 100px;
+        width: 200px;
+        margin-bottom: 10px;
+    }
 }
+
+
+
+
+
+.details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 16px;
+  }
+  
+  .coch-desc,
+  .coch-img {
+    width: 100%;
+    padding: 16px;
+  }
+  
+  .coch-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  @media (min-width: 768px) {
+    .coch-desc,
+    .coch-img {
+      width: 50%;
+    }
+  
+    .coch-desc p {
+      font-size: 1.125rem; 
+    }
+    .details{
+        flex-wrap: wrap;
+    }
+  }
+  
+
+
+
+
+  
