--- a/src/About/About.css
+++ b/src/About/About.css
@@ -102,6 +102,8 @@ nav ul li:first-child {
   display: flex;
 }
 .mobile-nav {
+  position: absolute;
+  top: 75px;
   background-color: #212121;
   color: white;
   text-transform: capitalize;
